# AIE9

./: .gitignore  README.md
.cursor/rules/: code-files.mdc  teaching-mode.mdc
00_AIE_Quicklinks/: README.md
00_Docs/: README.md
00_Docs/Session_Sheets/: 01_Vibe_Check.md  02_Dense_Vector_Retrieval.md  03_The_Agent_Loop.md  04_Agentic_RAG_From_Scratch.md  05_Multi-Agent_Applications.md  06_Agent_Memory.md  07_Deep_Agents.md  (+4 more)
01_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md  pyproject.toml
03_The_Agent_Loop/: README.md  The_Agent_Loop_Assignment.ipynb
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  README.md
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb  README.md  pyproject.toml
06_Agent_Memory/: Agent_Memory_Assignment.ipynb  README.md  langgraph.json  pyproject.toml
07_Deep_Agents/: .env.sample  Deep_Agents_Assignment.ipynb  README.md  pyproject.toml  stress_management_guide.md
07_Deep_Agents/skills/meal-planning/: SKILL.md
07_Deep_Agents/skills/wellness-assessment/: SKILL.md
08_Open_DeepResearch/: README.md  open-deep-research.ipynb  pyproject.toml
09_Synthetic_Data_Generation_and_LangSmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  pyproject.toml  usecase_data_kg.json
09_Synthetic_Data_Generation_and_LangSmith/data/: MentalHealthGuide.txt
10_Evaluating_RAG_With_Ragas/: .env.sample  Evaluating_Agents_Assignment.ipynb  Evaluating_RAG_Assignment.ipynb  README.md  pyproject.toml
(+90 files in other folders)
