[project]
name = "09-synthetic-data-generation-and-langsmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-community>=0.3.16",
    "langchain-openai>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.69",
    "numpy>=2.2.2",
    "ragas==0.2.10",
    "nltk==3.8.1",
    "rapidfuzz>=3.14.3",
    "langchain-text-splitters>=1.1.0",
    "openevals>=0.1.3",
]
